Restrcuturing competencies page slightly

--- a/app/views/competencies/_competency.html.erb
+++ b/app/views/competencies/_competency.html.erb
@@ -12,14 +12,14 @@
     </div>
   </div>
 
+
   <div class="description">
     <%= competency.description_html %>
-    <hr/>
   </div>
 
-  <div class="scores">
+<!--   <div class="scores">
     <%= render partial: 'scores', object: competency, as: :competency %>
-  </div>
+  </div> -->
 
   <div class="skills">
     <hr/>
