--- a/app/views/competencies/_progress.html.erb
+++ b/app/views/competencies/_progress.html.erb
@@ -1,16 +1,21 @@
 <nav role="navigation">
   <ul class="navigation-menu">
     <% competencies.each do |competency| %>
-      <% next unless competency.subscribed_by?(current_user) %>
 
       <li class="nav-link competency-status">
         <a href="<%= competency_path(competency) %>">
           <%= competency.title %>
-          <span class="badge-success"><%= competency_percentage(competency) %></span>
-          <span class="badge-success"><%= competency_score(competency) %></span>
-          <span class="badge-notice"><%= skill_completion(competency) %> skills</span>
+
+          <% if competency.subscribed_by?(current_user) %>
+
+            <span class="badge-success"><%= competency_percentage(competency) %></span>
+            <span class="badge-success"><%= competency_score(competency) %></span>
+            <span class="badge-notice"><%= skill_completion(competency) %> skills</span>
+
+          <% end %>
         </a>
       </li>
+
     <% end %>
   </ul>
 </nav>
