Temp fix for ordering of competencies

--- a/app/views/competencies/show.html.erb
+++ b/app/views/competencies/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, @competency.title %>
 
 <% content_for :header_bar do %>
-  <%= render partial: 'progress_with_siblings' %>
+  <%= render partial: 'progress_with_siblings', %>
 <% end %>
 
 <%= render @competency %>
