--- a/app/views/competencies/_progress.html.erb
+++ b/app/views/competencies/_progress.html.erb
@@ -1,21 +1,24 @@
 <nav role="navigation">
   <ul class="navigation-menu">
     <% competencies.each do |competency| %>
-
-      <li class="nav-link competency-status">
-        <a href="<%= competency_path(competency) %>">
-          <%= competency.title %>
-
-          <% if competency.subscribed_by?(current_user) %>
-
+      <% next unless competency.subscribed_by?(current_user) %>
+        <li class="nav-link competency-status">
+          <a href="<%= competency_path(competency) %>">
+            <%= competency.title %>
             <span class="badge-success"><%= competency_percentage(competency) %></span>
             <span class="badge-success"><%= competency_score(competency) %></span>
             <span class="badge-notice"><%= skill_completion(competency) %> skills</span>
+          </a>
+        </li>
+    <% end %>
 
-          <% end %>
-        </a>
-      </li>
-
+    <% competencies.each do |competency| %>
+      <% next if competency.subscribed_by?(current_user) %>
+        <li class="nav-link competency-status">
+          <a href="<%= competency_path(competency) %>">
+            <%= competency.title %>
+          </a>
+        </li>
     <% end %>
   </ul>
 </nav>
