--- a/app/views/competencies/_progress_with_siblings.html.erb
+++ b/app/views/competencies/_progress_with_siblings.html.erb
@@ -3,9 +3,9 @@
     <li class="nav-link competency-status">
       <a href="<%= competency_path(@competency) %>">
         <%= @competency.title %>
-        <span class="badge-success"><%= competency_percentage(@competency) %></span>
-        <span class="badge-success"><%= competency_score(@competency) %></span>
-        <span class="badge-notice"><%= skill_completion(@competency) %> skills</span>
+        <%= competency_percentage(@competency) %>
+        <%= competency_score(@competency) %>
+        <%= skill_completion(@competency) %>
       </a>
     </li>
   </ul>
