--- a/app/views/external_resources/_external_resource.html.erb
+++ b/app/views/external_resources/_external_resource.html.erb
@@ -1,12 +1,14 @@
-<section class="external-resource" data-id="<%= external_resource.id %>" data-path="<%= url_for(external_resource) %>">
-  <h1><%= external_resource.title %></h1>
+<% cache(external_resource) do %>
+  <section class="external-resource" data-id="<%= external_resource.id %>" data-path="<%= url_for(external_resource) %>">
+    <h1><%= external_resource.title %></h1>
 
-  <div class="embedded-resource">
-    <%= external_resource.uri_html %>
-  </div>
+    <div class="embedded-resource">
+      <%= external_resource.uri_html %>
+    </div>
 
-  <div class="description">
-    <%= external_resource.description_html %>
-  </div>
+    <div class="description">
+      <%= external_resource.description_html %>
+    </div>
 
-</section>
+  </section>
+<% end %>
