--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,32 +1,34 @@
-<footer class="footer-2" role="contentinfo">
-  <div class="footer-logo">
-    <%= image_tag('placeholder_logo.png') %>
-  </div>
-
-    <ul>
-      <li><a href="/admin">Admin</a></li>
-      <li><a href="/admin/competency">Competencies</a></li>
-      <li><a href="/admin/skill">Skills</a></li>
-      <li><a href="/admin/task">Tasks</a></li>
-      <li><a href="/admin/user">Users</a></li>
-    </ul>
-
-    <div class="footer-secondary-links">
-      <ul>
-        <li><a href="javascript:void(0)">Terms and Conditions</a></li>
-        <li><a href="javascript:void(0)">Privacy Policy</a></li>
-      </ul>
-
-      <ul class="footer-social">
-        <li><a href="javascript:void(0)">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="Facebook">
-          </a></li>
-        <li><a href="javascript:void(0)">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="Twitter">
-        </a></li>
-        <li><a href="javascript:void(0)">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="YouTube">
-        </a></li>
-      </ul>
+<% cache do %>
+  <footer class="footer-2" role="contentinfo">
+    <div class="footer-logo">
+      <%= image_tag('placeholder_logo.png') %>
     </div>
-</footer>
+
+      <ul>
+        <li><a href="/admin">Admin</a></li>
+        <li><a href="/admin/competency">Competencies</a></li>
+        <li><a href="/admin/skill">Skills</a></li>
+        <li><a href="/admin/task">Tasks</a></li>
+        <li><a href="/admin/user">Users</a></li>
+      </ul>
+
+      <div class="footer-secondary-links">
+        <ul>
+          <li><a href="javascript:void(0)">Terms and Conditions</a></li>
+          <li><a href="javascript:void(0)">Privacy Policy</a></li>
+        </ul>
+
+        <ul class="footer-social">
+          <li><a href="javascript:void(0)">
+            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="Facebook">
+            </a></li>
+          <li><a href="javascript:void(0)">
+            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="Twitter">
+          </a></li>
+          <li><a href="javascript:void(0)">
+            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="YouTube">
+          </a></li>
+        </ul>
+      </div>
+  </footer>
+<% end %>
