--- a/app/views/tasks/_card.html.erb
+++ b/app/views/tasks/_card.html.erb
@@ -5,13 +5,18 @@
 
   <%= render partial: 'shared/done_ribbon', object: task, as: :item %>
 
-  <div class="card-image">
-    <%= image_tag(task.banner.file? ? task.banner.url : @skill.banner.url) %>
-  </div>
-  <div class="card-header">
-    <%= task.title %>
-  </div>
-  <div class="card-copy">
-    <%= truncate(task.description_html) %>
-  </div>
+  <% cache(task) do %>
+
+    <div class="card-image">
+      <%= image_tag(task.banner.file? ? task.banner.url : @skill.banner.url) %>
+    </div>
+    <div class="card-header">
+      <%= task.title %>
+    </div>
+    <div class="card-copy">
+      <%= truncate(task.description_html) %>
+    </div>
+
+  <% end %>
+
 </div>
