Better footer caching

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<% cache do %>
+<% cache('footer') do %>
   <footer class="footer-2" role="contentinfo">
     <div class="footer-logo">
       <%= image_tag('placeholder_logo.png') %>
