--- a/app/views/skills/_skill.html.erb
+++ b/app/views/skills/_skill.html.erb
@@ -7,13 +7,12 @@
   <div class="header parallax-window">
     <div class="parallax-static-content">
 
-      <%= render partial: 'shared/completed_ribbon', object: skill, as: :item %>
 
       <span class="title">
         <h1><%= skill.title %></h1>
       </span>
     </div>
-    <div class="parallax-background" style="background-image: url('<%= skill.banner.url %>');"></div>
+    <div class="parallax-background" style="background-image: url('<%= asset_path skill.banner.url %>');"></div>
   </div>
 
   <span class="modified">Last modified <%= l skill.updated_at, format: :short %></span>
