--- a/app/views/skills/_skill.html.erb
+++ b/app/views/skills/_skill.html.erb
@@ -7,6 +7,7 @@
   <div class="header parallax-window">
     <div class="parallax-static-content">
 
+      <%= render partial: 'shared/completed_ribbon', object: skill, as: :item %>
 
       <span class="title">
         <h1><%= skill.title %></h1>
