--- a/app/assets/stylesheets/competencies.css.scss
+++ b/app/assets/stylesheets/competencies.css.scss
@@ -93,7 +93,8 @@
     @include span-columns(12);
 
     .skill-card {
-      @include span-columns(4 of 12);
+      @include span-columns(4);
+      @include omega(4n);
     }
   }
 
