--- a/app/assets/stylesheets/skills.css.scss
+++ b/app/assets/stylesheets/skills.css.scss
@@ -14,7 +14,8 @@
     @include span-columns(12);
 
     .task-card {
-      @include span-columns(4 of 12);
+      @include span-columns(4);
+      @include omega(4n);
     }
   }
 
