Removing old external resource model

--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -26,7 +26,7 @@
   <div class="resources">
     <hr/>
 
-    <%= render task.external_resources %>
+    <!-- render task.external_resources -->
   </div>
 
   <div class="status">
