Adding positioning option to task components

--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -25,7 +25,7 @@
 
   <div class="resources">
     <hr/>
-
+    <%= task.task_components.first.component_type %>
     <!-- render task.external_resources -->
   </div>
 
