--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : 'No title' %> | <%= Rails.application.class.parent_name %></title>
+    <title><%= content_for?(:title) ? content_for(:title) : 'No title' %> | <%= Rails.application.class.parent_name %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -17,7 +17,7 @@
 
 
 
-  <%= yield(:page_stylesheet) if content_for?(:page_stylesheet) %>
+  <%= content_for(:page_stylesheet) if content_for?(:page_stylesheet) %>
 
   </head>
   <body>
@@ -29,7 +29,7 @@
     <% if content_for?(:header_bar) %>
       <header class="navigation" role="banner">
         <div class="navigation-wrapper">
-          <%= yield(:header_bar) %>
+          <%= content_for(:header_bar) %>
         </div>
       </header>
     <% end %>
@@ -46,6 +46,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "application" %>
-    <%= yield(:page_javascript) if content_for?(:page_javascript) %>
+    <%= content_for(:page_javascript) if content_for?(:page_javascript) %>
   </body>
 </html>
