Start of editable task components

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -27,7 +27,7 @@ $light-green: #E6EFC2;
 // Flash and notice colors
 $warning-color: $light-yellow;
 $error-color: $light-red;
-$notice-color: #e5edf8 !default;
+$notice-color: $blue;
 $success-color: $light-green;
 
 
