--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -25,9 +25,11 @@
 
   <div class="resources">
     <hr/>
-    <%= render partial: 'add_task_component' %>
-
-    <%= render task.task_components.rank(:task_order) %>
+    <% if task.task_components.empty? %>
+      <%= render partial: 'add_first_task_component' %>
+    <% else %>
+      <%= render task.task_components.rank(:task_order) %>
+    <% end %>
   </div>
 
   <div class="status">
