--- a/app/views/tasks/_add_task_component.html.erb
+++ b/app/views/tasks/_add_task_component.html.erb
@@ -1,2 +1,3 @@
-<%= link_to 'Add something', new_skill_task_task_component_path(@skill, @task), :class => 'add-task-component' %>
+<%= link_to '<i class="fa fa-plus-circle fa-lg"></i>'.html_safe, new_skill_task_task_component_path(@skill, @task), :class => 'add-task-component first' %>
+
 <div class="add-task-component-container"></div>
