--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,10 +6,10 @@
 
       <ul>
         <li><a href="/admin">Admin</a></li>
-        <li><a href="/admin/competency">Competencies</a></li>
-        <li><a href="/admin/skill">Skills</a></li>
-        <li><a href="/admin/task">Tasks</a></li>
-        <li><a href="/admin/user">Users</a></li>
+        <li><a href="/admin/competencies">Competencies</a></li>
+        <li><a href="/admin/skills">Skills</a></li>
+        <li><a href="/admin/tasks">Tasks</a></li>
+        <li><a href="/admin/users">Users</a></li>
       </ul>
 
       <div class="footer-secondary-links">
