--- a/app/views/competencies/_progress_index.html.erb
+++ b/app/views/competencies/_progress_index.html.erb
@@ -3,7 +3,7 @@
 <nav role="navigation">
   <ul class="navigation-menu">
     <li class="nav-link competency-status">
-      All competencies
+      <a href="<%= competencies_path %>">All competencies</a>
     </li>
   </ul>
 </nav>
