--- a/app/views/skills/_skill.html.erb
+++ b/app/views/skills/_skill.html.erb
@@ -5,15 +5,17 @@
   data-path="<%= url_for(skill) %>">
 
   <div class="header parallax-window">
-    <div class="parallax-static-content">
+    <a href="<%= edit_admin_skill_path(skill) %>">
+      <div class="parallax-static-content">
 
-      <%= render partial: 'shared/completed_ribbon', object: skill, as: :item %>
+        <%= render partial: 'shared/completed_ribbon', object: skill, as: :item %>
 
-      <span class="title">
-        <h1><%= skill.title %></h1>
-      </span>
-    </div>
-    <div class="parallax-background" style="background-image: url('<%= asset_path skill.banner.url %>');"></div>
+        <span class="title">
+          <h1><%= skill.title %></h1>
+        </span>
+      </div>
+      <div class="parallax-background" style="background-image: url('<%= asset_path skill.banner.url %>');"></div>
+    </a>
   </div>
 
   <span class="modified">Last modified <%= l skill.updated_at, format: :short %></span>
