--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -11,6 +11,15 @@
 @import "active_admin/mixins";
 @import "active_admin/base";
 
+
+html {
+  font-size: 18px;
+}
+
+form textarea, form li.string input {
+  font-size: 16px;
+}
+
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
 //
